docs(deploy): Story 5.1 T6 — proofs, catalog rows, ledger closure
Clean build GREEN end-to-end (1m46s, exit 0; PackagedBootSmokeTest 2/2,
CompanionModeBannerTest 2/2 — fresh XMLs). DEPLOY catalog: dated Status
markers on DEPLOY-003/004 (JAR halves landed as contract + smoke,
technique amended; Docker halves stay open), DEPLOY-014 (owner-decision
record: exact-build refusal arm dropped 2026-09-10 — standing mechanism
= major-25 toolchain pin + asdf .tool-versions environment pin), new
DEPLOY-015 as-landed row (the packaged boot+smoke); §1.1/§1.2 tallies
253→254. deferred-work: :195 lazy-init → documented deviation on the T2
contract page (4b69a43), :706 banner → logback WARN JSON (60cd03d),
:710 binder → five JVM binder beans on the one registry (d4daa99) —
each verified against landed code before writing. Spec T6 → [x]:
story tasks complete.

Co-Authored-By: Claude Code <noreply@anthropic.com>